# SkillLoom

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: CHANGELOG.zh.md  README.zh.md  skills_hub_design.html  system-design.md  system-design.zh.md
scripts/: coverage-rust.sh  extract-changelog.mjs  tauri-icon-desktop.mjs  version.mjs
src/: App.css  App.tsx  index.css  tauri-plugin-dialog.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/commands/tests/: commands.rs
src-tauri/src/core/: cache_cleanup.rs  central_repo.rs  content_hash.rs  git_fetcher.rs  github_search.rs  installer.rs  mod.rs  onboarding.rs  skill_store.rs  skills_sh_leaderboard.rs  sync_engine.rs  temp_cleanup.rs
src-tauri/src/core/tests/: central_repo.rs  content_hash.rs  git_fetcher.rs  github_search.rs  installer.rs  onboarding.rs  skill_store.rs  skills_sh_leaderboard.rs  sync_engine.rs  temp_cleanup.rs  tool_adapters.rs
src-tauri/src/core/tool_adapters/: mod.rs
src/components/: Layout.tsx
src/components/skills/: FilterBar.tsx  Header.tsx  LeaderboardCard.tsx  LeaderboardTab.tsx  LoadingOverlay.tsx  SkillCard.tsx  SkillsList.tsx  ToolSkillsTab.tsx  leaderboardInstallQueue.test.ts  leaderboardInstallQueue.ts  toolSkills.ts  (+6 more)
src/i18n/: index.ts  resources.ts
src/pages/: Dashboard.tsx
(+8 files in other folders)
