[package]
name = "app"
version = "0.2.0"
description = "SkillLoom – manage and sync AI agent skills across tools"
authors = ["you"]
license = ""
repository = "git@github.com:wwwwwww1-stack/SkillLoom.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["test"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
anyhow = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5.0"
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"
git2 = { version = "0.19", features = ["vendored-openssl"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
scraper = "0.22"
junction = "1.1"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3"
mockito = "1"
